Last commit for the night, work is a WIP
made a socket handler to send stuff to client,

added the start of the work function

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -134,6 +134,18 @@ body{
 #jobListing:focus{
     outline: none;
 }
+#workButton{
+    margin-top: .5rem;
+    left: 89.2%;
+    position: relative;
+    max-width: 9rem;
+    top: 3rem;
+    background: transparent;
+    border: none;
+}
+#workButton:focus{
+    outline: none;
+}
 .joblist{
     width: 100%;
     background: rgb(43,43,43,.8);
