start eat stuff

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,6 +170,18 @@ body{
 #storeListing:focus{
     outline: none;
 }
+#eatListing{
+    margin-top: .5rem;
+    left: 80%;
+    position: relative;
+    max-width: 9rem;
+    top:10.5rem;
+    background: transparent;
+    border: none;
+}
+#eatListing:focus{
+    outline: none;
+}
 .joblist{
     width: 100%;
     background: rgb(43,43,43,.8);
