--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,6 +99,16 @@ body{
     background: #232b38;
     margin: 1rem;
 }
+#peerShort{
+    max-width: 250px;
+    font-size: 1.5rem;
+    color: aliceblue;
+    padding: 10px;
+    border-radius: 10px;
+    background: #232b38;
+    margin: 1rem;
+    cursor: pointer;
+}
 .shortClientImg{
     border-radius: 5px;
     width: 5.4rem;
@@ -220,4 +230,11 @@ body{
     padding: 5px 10px;
     border-radius: 5px;
     margin-right: 5px;
+}
+.playerListButton{
+    border: none;
+    background: none;
+}
+.playerListButton:focus{
+    outline: none;
 }
