Give is WIP, switched up playerlist
Playerlist now uses buttons to load a Peer profile to give the option to give players items/money

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -204,6 +204,7 @@ body{
     column-gap: 5rem;
     max-height: 63.5rem;
     overflow-y: auto;
+    grid-row-gap: 2rem;
 }
 .AcceptJobButton{
     border: none;
